-rm warnings